// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiButton should render component with disabled state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c1[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c1[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c1[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1:hover {
  cursor: pointer;
}

.c1:disabled {
  cursor: not-allowed;
}

.c7 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='primary']:focus,
.c7[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'],
.c7[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='secondary']:focus,
.c7[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='secondary']:focus *[fill^='#'],
.c7[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'],
.c7[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c7[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='ghost']:focus,
.c7[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:focus *[fill^='#'],
.c7[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'],
.c7[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c7[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='white'][data-appearance~='disabled'],
.c7[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c7[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c7[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c7[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='danger']:focus,
.c7[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c7[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'],
.c7[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c7[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success']:focus,
.c7[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c7[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c7[data-appearance~='success'][data-appearance~='disabled'],
.c7[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c7[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c7[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7:hover {
  cursor: pointer;
}

.c7:disabled {
  cursor: not-allowed;
}

.c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c8[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c8[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c8:focus {
  outline: none;
}

.c6 {
  width: 2px;
}

.c6[data-appearance~='primary'] {
  background-color: transparent;
}

.c6[data-appearance~='secondary'] {
  background-color: #0D69F2;
}

.c6[data-appearance~='secondary'] {
  background-color: #A7B0BE;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[data-focused='true'] [data-appearance='secondary'] {
  border-color: #0A54C2;
}

.c0[data-focused='true'] .c5[data-appearance="secondary"] {
  background-color: #0A54C2;
}

.c0:active [data-appearance='secondary'] {
  border-color: #083F91;
}

.c0:active .c5[data-appearance="secondary"] {
  background-color: #083F91;
}

.c0[data-appearance~='disabled'] + div {
  background-color: #A7B0BE;
}

.c9 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<body>
    <div>
      <div
        class="c0"
        data-focused="false"
        data-testid="multi"
      >
        <button
          class="c1 c2"
          data-appearance="primary"
          data-dimension="l"
          disabled=""
          id="1"
          type="button"
        >
          <span
            class="c3 c4"
          >
            <span>
              one
            </span>
          </span>
        </button>
        <div
          aria-hidden="true"
          class="c5 c6"
          data-appearance="primary"
          disabled=""
        />
        <button
          aria-expanded="false"
          class="c7 c8"
          data-appearance="primary"
          data-dimension="l"
          disabled=""
          type="button"
        >
          <span
            class="c3 c4"
          >
            <div
              class="c9"
            />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": .c1 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c1[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c1[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c1[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1:hover {
  cursor: pointer;
}

.c1:disabled {
  cursor: not-allowed;
}

.c7 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='primary']:focus,
.c7[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'],
.c7[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='secondary']:focus,
.c7[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='secondary']:focus *[fill^='#'],
.c7[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'],
.c7[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c7[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='ghost']:focus,
.c7[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:focus *[fill^='#'],
.c7[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'],
.c7[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c7[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='white'][data-appearance~='disabled'],
.c7[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c7[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c7[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c7[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='danger']:focus,
.c7[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c7[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'],
.c7[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c7[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success']:focus,
.c7[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c7[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c7[data-appearance~='success'][data-appearance~='disabled'],
.c7[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c7[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c7[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7:hover {
  cursor: pointer;
}

.c7:disabled {
  cursor: not-allowed;
}

.c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c8[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c8[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c8:focus {
  outline: none;
}

.c6 {
  width: 2px;
}

.c6[data-appearance~='primary'] {
  background-color: transparent;
}

.c6[data-appearance~='secondary'] {
  background-color: #0D69F2;
}

.c6[data-appearance~='secondary'] {
  background-color: #A7B0BE;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[data-focused='true'] [data-appearance='secondary'] {
  border-color: #0A54C2;
}

.c0[data-focused='true'] .c5[data-appearance="secondary"] {
  background-color: #0A54C2;
}

.c0:active [data-appearance='secondary'] {
  border-color: #083F91;
}

.c0:active .c5[data-appearance="secondary"] {
  background-color: #083F91;
}

.c0[data-appearance~='disabled'] + div {
  background-color: #A7B0BE;
}

.c9 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<div>
    <div
      class="c0"
      data-focused="false"
      data-testid="multi"
    >
      <button
        class="c1 c2"
        data-appearance="primary"
        data-dimension="l"
        disabled=""
        id="1"
        type="button"
      >
        <span
          class="c3 c4"
        >
          <span>
            one
          </span>
        </span>
      </button>
      <div
        aria-hidden="true"
        class="c5 c6"
        data-appearance="primary"
        disabled=""
      />
      <button
        aria-expanded="false"
        class="c7 c8"
        data-appearance="primary"
        data-dimension="l"
        disabled=""
        type="button"
      >
        <span
          class="c3 c4"
        >
          <div
            class="c9"
          />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiButton should render component with primary appearance 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c1[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c1[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c1[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1:hover {
  cursor: pointer;
}

.c1:disabled {
  cursor: not-allowed;
}

.c7 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='primary']:focus,
.c7[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'],
.c7[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='secondary']:focus,
.c7[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='secondary']:focus *[fill^='#'],
.c7[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'],
.c7[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c7[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='ghost']:focus,
.c7[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:focus *[fill^='#'],
.c7[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'],
.c7[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c7[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='white'][data-appearance~='disabled'],
.c7[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c7[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c7[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c7[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='danger']:focus,
.c7[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c7[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'],
.c7[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c7[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success']:focus,
.c7[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c7[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c7[data-appearance~='success'][data-appearance~='disabled'],
.c7[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c7[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c7[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7:hover {
  cursor: pointer;
}

.c7:disabled {
  cursor: not-allowed;
}

.c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c8[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c8[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c8:focus {
  outline: none;
}

.c6 {
  width: 2px;
}

.c6[data-appearance~='primary'] {
  background-color: transparent;
}

.c6[data-appearance~='secondary'] {
  background-color: #0D69F2;
}

.c6[data-appearance~='secondary'] {
  background-color: #0D69F2;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[data-focused='true'] [data-appearance='secondary'] {
  border-color: #0A54C2;
}

.c0[data-focused='true'] .c5[data-appearance="secondary"] {
  background-color: #0A54C2;
}

.c0:active [data-appearance='secondary'] {
  border-color: #083F91;
}

.c0:active .c5[data-appearance="secondary"] {
  background-color: #083F91;
}

.c0[data-appearance~='disabled'] + div {
  background-color: #A7B0BE;
}

.c9 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<body>
    <div>
      <div
        class="c0"
        data-focused="false"
        data-testid="multi"
      >
        <button
          class="c1 c2"
          data-appearance="primary"
          data-dimension="l"
          id="1"
          type="button"
        >
          <span
            class="c3 c4"
          >
            <span>
              one
            </span>
          </span>
        </button>
        <div
          aria-hidden="true"
          class="c5 c6"
          data-appearance="primary"
        />
        <button
          aria-expanded="false"
          class="c7 c8"
          data-appearance="primary"
          data-dimension="l"
          type="button"
        >
          <span
            class="c3 c4"
          >
            <div
              class="c9"
            />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": .c1 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c1[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c1[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c1[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1:hover {
  cursor: pointer;
}

.c1:disabled {
  cursor: not-allowed;
}

.c7 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='primary']:focus,
.c7[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'],
.c7[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='secondary']:focus,
.c7[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='secondary']:focus *[fill^='#'],
.c7[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'],
.c7[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c7[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='ghost']:focus,
.c7[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:focus *[fill^='#'],
.c7[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'],
.c7[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c7[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='white'][data-appearance~='disabled'],
.c7[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c7[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c7[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c7[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='danger']:focus,
.c7[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c7[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'],
.c7[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c7[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success']:focus,
.c7[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c7[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c7[data-appearance~='success'][data-appearance~='disabled'],
.c7[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c7[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c7[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7:hover {
  cursor: pointer;
}

.c7:disabled {
  cursor: not-allowed;
}

.c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c8[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c8[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c8:focus {
  outline: none;
}

.c6 {
  width: 2px;
}

.c6[data-appearance~='primary'] {
  background-color: transparent;
}

.c6[data-appearance~='secondary'] {
  background-color: #0D69F2;
}

.c6[data-appearance~='secondary'] {
  background-color: #0D69F2;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[data-focused='true'] [data-appearance='secondary'] {
  border-color: #0A54C2;
}

.c0[data-focused='true'] .c5[data-appearance="secondary"] {
  background-color: #0A54C2;
}

.c0:active [data-appearance='secondary'] {
  border-color: #083F91;
}

.c0:active .c5[data-appearance="secondary"] {
  background-color: #083F91;
}

.c0[data-appearance~='disabled'] + div {
  background-color: #A7B0BE;
}

.c9 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<div>
    <div
      class="c0"
      data-focused="false"
      data-testid="multi"
    >
      <button
        class="c1 c2"
        data-appearance="primary"
        data-dimension="l"
        id="1"
        type="button"
      >
        <span
          class="c3 c4"
        >
          <span>
            one
          </span>
        </span>
      </button>
      <div
        aria-hidden="true"
        class="c5 c6"
        data-appearance="primary"
      />
      <button
        aria-expanded="false"
        class="c7 c8"
        data-appearance="primary"
        data-dimension="l"
        type="button"
      >
        <span
          class="c3 c4"
        >
          <div
            class="c9"
          />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiButton should render component with secondary appearance 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c1[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c1[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c1[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1:hover {
  cursor: pointer;
}

.c1:disabled {
  cursor: not-allowed;
}

.c7 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='primary']:focus,
.c7[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'],
.c7[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='secondary']:focus,
.c7[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='secondary']:focus *[fill^='#'],
.c7[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'],
.c7[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c7[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='ghost']:focus,
.c7[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:focus *[fill^='#'],
.c7[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'],
.c7[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c7[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='white'][data-appearance~='disabled'],
.c7[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c7[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c7[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c7[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='danger']:focus,
.c7[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c7[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'],
.c7[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c7[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success']:focus,
.c7[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c7[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c7[data-appearance~='success'][data-appearance~='disabled'],
.c7[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c7[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c7[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7:hover {
  cursor: pointer;
}

.c7:disabled {
  cursor: not-allowed;
}

.c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c8[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c8[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c8:focus {
  outline: none;
}

.c6 {
  width: 2px;
}

.c6[data-appearance~='primary'] {
  background-color: transparent;
}

.c6[data-appearance~='secondary'] {
  background-color: #0D69F2;
}

.c6[data-appearance~='secondary'] {
  background-color: #0D69F2;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[data-focused='true'] [data-appearance='secondary'] {
  border-color: #0A54C2;
}

.c0[data-focused='true'] .c5[data-appearance="secondary"] {
  background-color: #0A54C2;
}

.c0:active [data-appearance='secondary'] {
  border-color: #083F91;
}

.c0:active .c5[data-appearance="secondary"] {
  background-color: #083F91;
}

.c0[data-appearance~='disabled'] + div {
  background-color: #A7B0BE;
}

.c9 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<body>
    <div>
      <div
        class="c0"
        data-focused="false"
        data-testid="multi"
      >
        <button
          class="c1 c2"
          data-appearance="secondary"
          data-dimension="l"
          id="1"
          type="button"
        >
          <span
            class="c3 c4"
          >
            <span>
              one
            </span>
          </span>
        </button>
        <div
          aria-hidden="true"
          class="c5 c6"
          data-appearance="secondary"
        />
        <button
          aria-expanded="false"
          class="c7 c8"
          data-appearance="secondary"
          data-dimension="l"
          type="button"
        >
          <span
            class="c3 c4"
          >
            <div
              class="c9"
            />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": .c1 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='primary']:focus,
.c1[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'],
.c1[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c1[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='secondary']:focus,
.c1[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c1[data-appearance~='secondary']:focus *[fill^='#'],
.c1[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c1[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'],
.c1[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c1[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c1[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c1[data-appearance~='ghost']:focus,
.c1[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:focus *[fill^='#'],
.c1[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c1[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c1[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'],
.c1[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c1[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c1[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c1[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='white'][data-appearance~='disabled'],
.c1[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c1[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c1[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c1[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='danger']:focus,
.c1[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c1[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'],
.c1[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c1[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-appearance~='success']:focus,
.c1[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c1[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c1[data-appearance~='success'][data-appearance~='disabled'],
.c1[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c1[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c1[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c1[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c1[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c1[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c1:hover {
  cursor: pointer;
}

.c1:disabled {
  cursor: not-allowed;
}

.c7 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-appearance~='primary'] {
  background-color: #0D69F2;
  color: #FFFFFF;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='primary']:focus,
.c7[data-appearance~='primary']:hover {
  background-color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='primary']:active {
  background-color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'],
.c7[data-appearance~='primary']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid #0D69F2;
}

.c7[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='secondary']:focus,
.c7[data-appearance~='secondary']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #0A54C2;
}

.c7[data-appearance~='secondary']:focus *[fill^='#'],
.c7[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='secondary']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #083F91;
}

.c7[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'],
.c7[data-appearance~='secondary']:disabled {
  background-color: #FFFFFF;
  color: #A7B0BE;
  border-color: #A7B0BE;
}

.c7[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0D69F2;
  border: 2px solid transparent;
}

.c7[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0D69F2;
}

.c7[data-appearance~='ghost']:focus,
.c7[data-appearance~='ghost']:hover {
  background-color: #F1F2F4;
  color: #0A54C2;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:focus *[fill^='#'],
.c7[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0A54C2;
}

.c7[data-appearance~='ghost']:active {
  background-color: #F1F2F4;
  color: #083F91;
  border-color: #F1F2F4;
}

.c7[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #083F91;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'],
.c7[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #A7B0BE;
  border-color: transparent;
}

.c7[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #A7B0BE;
}

.c7[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
}

.c7[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='white'][data-appearance~='disabled'],
.c7[data-appearance~='white']:disabled {
  border-color: #8A96A8;
  color: #8A96A8;
}

.c7[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #8A96A8;
}

.c7[data-appearance~='danger'] {
  background-color: #DA0B20;
  color: #FFFFFF;
  border: 2px solid #DA0B20;
}

.c7[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='danger']:focus,
.c7[data-appearance~='danger']:hover {
  background-color: #A90919;
  border-color: #A90919;
}

.c7[data-appearance~='danger']:active {
  background-color: #790612;
  border-color: #790612;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'],
.c7[data-appearance~='danger']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success'] {
  background-color: #05A13A;
  color: #FFFFFF;
  border: 2px solid #05A13A;
}

.c7[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-appearance~='success']:focus,
.c7[data-appearance~='success']:hover {
  background-color: #219246;
  border-color: #219246;
}

.c7[data-appearance~='success']:active {
  background-color: #186832;
  border-color: #186832;
}

.c7[data-appearance~='success'][data-appearance~='disabled'],
.c7[data-appearance~='success']:disabled {
  background-color: #C4CAD4;
  color: #FFFFFF;
  border-color: #C4CAD4;
}

.c7[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c7[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #FFFFFF;
}

.c7[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  width: 56px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7[data-dimension='l'] {
  height: 48px;
  width: 48px;
}

.c7[data-dimension='m'] {
  height: 40px;
  width: 40px;
}

.c7[data-dimension='s'] {
  height: 32px;
  width: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c7:hover {
  cursor: pointer;
}

.c7:disabled {
  cursor: not-allowed;
}

.c4 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c4 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c4 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3 > svg {
  width: 20px;
  height: 20px;
}

.c2[data-appearance~='primary'] {
  border-radius: 4px 0 0 4px;
}

.c2[data-appearance~='secondary'] {
  border-right: none;
  border-radius: 4px 0 0 4px;
}

.c2:focus {
  outline: none;
}

.c8[data-appearance~='primary'] {
  border-radius: 0 4px 4px 0;
}

.c8[data-appearance~='secondary'] {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.c8:focus {
  outline: none;
}

.c6 {
  width: 2px;
}

.c6[data-appearance~='primary'] {
  background-color: transparent;
}

.c6[data-appearance~='secondary'] {
  background-color: #0D69F2;
}

.c6[data-appearance~='secondary'] {
  background-color: #0D69F2;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[data-focused='true'] [data-appearance='secondary'] {
  border-color: #0A54C2;
}

.c0[data-focused='true'] .c5[data-appearance="secondary"] {
  background-color: #0A54C2;
}

.c0:active [data-appearance='secondary'] {
  border-color: #083F91;
}

.c0:active .c5[data-appearance="secondary"] {
  background-color: #083F91;
}

.c0[data-appearance~='disabled'] + div {
  background-color: #A7B0BE;
}

.c9 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<div>
    <div
      class="c0"
      data-focused="false"
      data-testid="multi"
    >
      <button
        class="c1 c2"
        data-appearance="secondary"
        data-dimension="l"
        id="1"
        type="button"
      >
        <span
          class="c3 c4"
        >
          <span>
            one
          </span>
        </span>
      </button>
      <div
        aria-hidden="true"
        class="c5 c6"
        data-appearance="secondary"
      />
      <button
        aria-expanded="false"
        class="c7 c8"
        data-appearance="secondary"
        data-dimension="l"
        type="button"
      >
        <span
          class="c3 c4"
        >
          <div
            class="c9"
          />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
